fixed comment-wrap margin-error

--- a/css/style.scss
+++ b/css/style.scss
@@ -243,8 +243,7 @@ div.related-body:hover{
 /*<<<<<<<<<<<< comment style *************/
 div.comments-wrap{
   margin-top: 120px;
-  margin-bottom: 90px;
-  //padding-bottom: 70px;
+  //margin-bottom: 90px;
 }
 
 /************* comment style >>>>>>>>>>>>*/
